# pyDOI

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  release.yml
src/pydoi/: __init__.py
