[metadata]
name = pyDOI
description = Python DOI Resolver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcnittl/pyDOI
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Hardware
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/pyDOI
project_urls =
    GitHub: repo = https://github.com/lcnittl/pyDOI
    GitHub: issues = https://github.com/lcnittl/pyDOI/issues

[options]
packages = find:
install_requires =
    requests>=2.25.1
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools_scm>=4.1
zip_safe = False

[aliases]
release = check -rs sdist bdist_wheel

[options.packages.find]
where = src
